--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WapBlog Firebase</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WapBlog</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>📱 WapBlog Firebase</h1>
-    <button id="adminBtn">Admin</button>
+    <h1>📖 WapBlog</h1>
+    <button id="adminBtn">🔑 Admin</button>
   </header>
 
   <main>
-    <form id="formPost" style="display:none;">
-      <input type="text" id="judul" placeholder="Judul tulisan" required>
-      <textarea id="isi" placeholder="Tulis isi artikel di sini..." required></textarea>
-      <button type="submit">Kirim Tulisan</button>
-    </form>
+    <section id="postForm">
+      <h2>Tulis Postingan</h2>
+      <input type="text" id="judul" placeholder="Judul..." />
+      <textarea id="isi" placeholder="Tulis isi postingan..."></textarea>
+      <button id="kirim">Kirim</button>
+    </section>
 
-    <h2>📰 Daftar Tulisan</h2>
-    <div id="daftarTulisan"></div>
+    <section id="postList">
+      <h2>Daftar Postingan</h2>
+      <div id="posts"></div>
+    </section>
   </main>
-
-  <footer>
-    <p>© 2025 WapBlog Firebase</p>
-  </footer>
 
   <script type="module" src="app.js"></script>
 </body>
